--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,21 +1,23 @@
 @font-face {
-	font-family: 'Conv_BLotus';
-	src: url('fonts/BLotus.eot');
-	src: local('☺'), url('fonts/BLotus.woff') format('woff'), url('fonts/BLotus.ttf') format('truetype'), url('fonts/BLotus.svg') format('svg');
+	font-family:'byekan';
+	src: 	url('fonts/byekan.eot') format('eot'),
+		url('fonts/byekan.eot#iefix') format('embedded-opentype'), 
+		url('fonts/byekan.woff') format('woff'), 
+		url('fonts/byekan.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
-html,body{height:100%;font-family:'Conv_BLotus',tahoma,sans-serif;font-size:16px;direction:rtl;color:#333;margin:0;padding:0}
+html,body{height:100%;font-family:byekan,tahoma,sans-serif;font-size:16px;direction:rtl;color:#333;margin:0;padding:0}
 body{background-color: #F5F5F5;/*background: url("../images/qmb.png") no-repeat;background-position:center;background-size: 700px;*/}
 caption{text-align: right }
 h1{color:#333;margin:0}
 h2{font-size: 23px;}
 h3{font-size: 18px;}
 h4{font-size: 15px}
-h3,h2,h4{color:#333;margin:3px 0 0 0;font-weight: normal}
+h3,h2,h4{color:#333;margin:3px 0 0 0;}
 hr{background:url("../images/h2.png") no-repeat scroll right;border:none;margin:0 0 15px 0}
 label{color:#333;float:right;font-size:15px;width:90px;}
-select{font-size:15px;color:#333;font-family:'Conv_BLotus',tahoma,sans-serif;}
+select{font-size:15px;color:#333;font-family:byekan,tahoma,sans-serif;}
 form p{clear:right}
 fieldset{border:1px solid #99D799;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px}
 table.clist{border-collapse:collapse;background-color: #FFFFFF;
@@ -24,7 +26,7 @@ table.clist{border-collapse:collapse;background-color: #FFFFFF;
     margin: 0 auto 10px;
     width:100%; table-layout: fixed;}
 table.clist th,table.clist td{border: 1px solid #fff;font-size:15px;vertical-align:top;padding:.3em .6em;text-align: center}
-table.clist th{text-align: center;font-weight: normal;background:url(../images/th.gif) repeat-x}
+table.clist th{text-align: center;background:url('../images/th.gif') repeat-x}
 table.clist th a{color:#414141;}
 table.n_column{width:100%;border:1px #99D799 solid;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}
 table.n_column td{font-size:17px;vertical-align:top;padding:.6em .6em}
@@ -58,8 +60,8 @@ div.navBulletsWrapper div.active {background-position:0 -11px;}
 #top_bar{height:71px;background: url("../images/topbar_bg.png") repeat-x #F3F3F3;}
 #top_bar .shadow{height: 7px;background: url("../images/header_shadow.jpg") top center no-repeat #F3F3F3;border-top:1px solid #fff;}
 .add{direction: rtl;font-family: Tahoma;font-size: 9pt;}
-.between{color:#CFCFCF;font-weight:bolder}
-.box{border:1px solid #DDD;box-shadow: 3px 3px 3px rgba(0,0,0,.5);text-decoration:none;display:inline-block;background:#EFEFEF;cursor:pointer;font-weight:bold;color:#00334F;font-family:'Conv_BLotus',tahoma,sans-serif;margin-left:55px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;padding:2px 10px}
+.between{color:#CFCFCF;}
+.box{border:1px solid #DDD;box-shadow: 3px 3px 3px rgba(0,0,0,.5);text-decoration:none;display:inline-block;background:#EFEFEF;cursor:pointer;color:#00334F;font-family:byekan,tahoma,sans-serif;margin-left:55px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;padding:2px 10px}
 .breadcrumbLi{color:#666;display:inline}
 .breadcrumbUl{margin:5px 0 0px;padding:0 0 5px 0;border-bottom:1px solid #CFCFCF;}
 .clear {
@@ -131,7 +133,7 @@ ul.list li a:hover{text-decoration:underline}
     margin: 0 auto 20px;
     max-width: 300px;
     padding: 19px 29px 29px;
-    font-weight: bold}
+    }
 .logo{float:left;text-align:left}
 .logoimg{margin:0;padding:0;border:0px;}
 .main_left{float:left;width:455px}
@@ -148,7 +150,7 @@ ul.list li a:hover{text-decoration:underline}
 .pagination{margin:3px;padding:3px}
 .pagination a{border:1px solid #AAD;text-decoration:none;color:#009;margin:2px;padding:2px 5px}
 .pagination a:hover,div.pagination a:active{border:1px solid #009;color:#000}
-.pagination span.current{border:1px solid #009;font-weight:700;background-color:#009;color:#FFF;margin:2px;padding:2px 5px}
+.pagination span.current{border:1px solid #009;background-color:#009;color:#FFF;margin:2px;padding:2px 5px}
 .pagination span.disabled{border:1px solid #EEE;color:#DDD;margin:2px;padding:2px 5px}
 .props{width: 55px;}
 .radius{-webkit-border-radius:16px;-moz-border-radius:16px;border-radius:16px}
@@ -161,7 +163,7 @@ ul.list li a:hover{text-decoration:underline}
 .sidebar ul{margin:0;padding:0}
 .sidebar ul a{text-decoration:none;color:#414141;font-size:13px}
 .sidebar ul a:hover{background:#99D799;text-decoration:none}
-.sidebar_title{border-bottom:1px solid #CFCFCF;text-align:center;font-weight:700;padding:5px}
+.sidebar_title{border-bottom:1px solid #CFCFCF;text-align:center;padding:5px}
 .sidebar li{list-style:none;line-height:2}
 .sidebar li a{display:block}
 .success{background:#BAEFBE;color:#264409;border-color:#65D562}
@@ -180,7 +182,7 @@ background-color: #FFFFFF;
     border-radius: 3px 3px 3px 3px;}
 li a:hover,.breadcrumbUl a:hover{text-decoration:underline}
 .atxt{text-align:justify;list-style:none;font-size:13px;line-height:2;color:#777}
-.welcom_notice{color:red;text-decoration: blink;font-weight: bold}
+.welcom_notice{color:red;text-decoration: blink}
 ul#css3menu1,ul#css3menu1 ul{
 	margin:0;list-style:none;padding:0;}
 ul#css3menu1 ul{
@@ -203,13 +205,13 @@ ul#css3menu1>li{
 ul#css3menu1 a:active, ul#css3menu1 a:focus{
 	outline-style:none;}
 ul#css3menu1 a{
-	display:block;vertical-align:middle;text-align:left;text-decoration:none;font:16px 'Conv_BLotus',tahoma,sans-serif;color:#333;cursor:pointer;padding:1px 5px;background-color:#eee;}
+	display:block;vertical-align:middle;text-align:left;text-decoration:none;font:16px byekan,tahoma,sans-serif;color:#333;cursor:pointer;padding:1px 5px;background-color:#eee;}
 ul#css3menu1 ul li{
-	float:none;margin:1px 0 0;border-bottom: 1px solid #ccc;padding:0 10px;width: 155px;background-color:#eee;}
+	float:none;margin:1px 0 0;border-bottom: 1px solid #ccc;padding:0 10px;min-width:155px;background-color:#eee;}
 ul#css3menu1 ul li:hover,ul#css3menu1 li:hover{
 	background-color:#ddd;}
 ul#css3menu1 ul a{
-	text-align:center;padding:1px;background-color:#eee;border-width:0;font:16px 'Conv_BLotus',tahoma,sans-serif;color:#333;text-decoration:none;}
+	text-align:center;padding:1px;background-color:#eee;border-width:0;font:16px byekan,tahoma,sans-serif;color:#333;text-decoration:none;}
 ul#css3menu1 li:hover>a,ul#css3menu1 li a.pressed{
 	background-color:#ddd;color:#000000;text-decoration:none;}
 ul#css3menu1 span{
@@ -220,11 +222,11 @@ ul#css3menu1 ul li:hover>a,ul#css3menu1 ul li a.pressed{
 	color:#000;text-decoration:none;}
 .amChartsDataSetSelector
 {
-	font-family:'Conv_BLotus',tahoma,sans-serif;font-size:16px;
+	font-family:byekan,tahoma,sans-serif;font-size:16px;
 }
 .amChartsPeriodSelector
 {
-    font-family:'Conv_BLotus',tahoma,sans-serif;font-size:16px;
+    font-family:byekan,tahoma,sans-serif;font-size:16px;
 }
 .amChartsButtonSelected
 {
@@ -253,13 +255,4 @@ ul#css3menu1 ul li:hover>a,ul#css3menu1 ul li a.pressed{
    border-style:solid;
    border-color:#CCCCCC;
    border-width:1px;
-}
-.amChartsInputField
-{
-}
-.amChartsLegend
-{
-}
-.amChartsPanel
-{  
 }
