--- a/public/css/main.css
+++ b/public/css/main.css
@@ -159,7 +159,7 @@ ul.list li a:hover{text-decoration:underline}
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);display:inline-block}
 .red{background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4}
 .search{margin-top:4px;padding:0}
-.select{width:150px;}
+.select{min-width:150px;}
 .sidebar{border:1px solid #CFCFCF;float:right;width:150px;text-align:center;margin:10px 3px 0 0;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px}
 .sidebar ul{margin:0;padding:0}
 .sidebar ul a{text-decoration:none;color:#414141;font-size:13px}
