--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,9 @@
 	font-weight: normal;
 	font-style: normal;
 }
+html,body,input,form{
+	font-family:byekan;
+}
 html,body{width:100%;
 	height:100%;
 	font-family:byekan,tahoma,sans-serif;
@@ -43,7 +46,6 @@ h4{font-size: 15px;}
 }
 hr{background:url("../images/h2.png") no-repeat scroll right;border:none;margin:0 0 10px 0}
 label{color:#333;float:right;font-size:15px;width:90px;}
-select{font-size:15px;color:#333;font-family:byekan,tahoma,sans-serif;}
 form p{clear:right}
 fieldset{border:1px solid #99D799;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px}
 table.clist{border-collapse:collapse;background-color: #FFFFFF;
@@ -92,7 +94,6 @@ div.mc-caption{font: bold 14px/20px Arial;color:#EEE;z-index:4;padding:10px 0;te
 #top_bar .shadow{height: 7px;background: url("../images/header_shadow.jpg") top center no-repeat #F3F3F3;border-top:1px solid #fff;}
 .add{direction: rtl;font-family: Tahoma;font-size: 9pt;}
 .between{color:#CFCFCF;}
-.box{border:1px solid #DDD;box-shadow: 3px 3px 3px rgba(0,0,0,.5);text-decoration:none;display:inline-block;background:#EFEFEF;cursor:pointer;color:#00334F;font-family:byekan,tahoma,sans-serif;margin-left:55px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;padding:2px 10px}
 .breadcrumbLi{color:#666;display:inline}
 .breadcrumbUl{margin:5px 0 0px;padding:0 0 5px 0;border-bottom:1px solid #CFCFCF;}
 .clear {
