--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
-html,body,input,form{
+html,body,input,form,select,textarea,text{
 	font-family:byekan;
 }
 html,body{width:100%;
