--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,24 +67,6 @@ table.n_column td{font-size:17px;vertical-align:top;padding:.6em .6em}
 }
 #header a{text-decoration: none;color:#414141}
 #logo{margin-top:20px}
-#menu{
-	background:#EDEDED;
-    border-bottom: 1px solid #DDDDDD;
-    margin: 0;
-    padding: 0px;
-    text-align: right;
-    position:fixed;
-    width:100%;
-    height:40px;
-    box-shadow:1px 0px 7px;
-    z-index: 99;
-    }
-#menu a{padding:0px 5px 0px 5px;}
-#menu ul{margin:0;padding:0; position: relative;}
-#menu ul li{list-style:none;margin-right:6px;margin-left:6px;display: inline;
-
-}
-#menu ul li a{text-decoration: none;color:#666;height:40px;}
 #sliderFrame {position:relative;width:800px;margin: 0 auto;}
 #slider{width:800px;height:500px;background:#fff url("../images/loading.gif") no-repeat 50% 50%;position:relative;margin:0 auto;}
 #slider img{position:absolute;border:none;display:none;}
@@ -171,11 +153,6 @@ ul.list li a:hover{text-decoration:underline}
 .logo{float:left;text-align:left}
 .logoimg{margin:0;padding:0;border:0px;}
 .main_left{float:left;width:455px}
-.menu{text-align:center;margin-top:16px}
-.menu ul{margin:0;padding:0}
-.menu ul li a{color:#4D5F72;text-decoration:none;font-size:13px}
-.menu ul li a:hover{color:#000}
-.menu ul li{display:inline}
 .notice{background:#FFF6BF;color:#514721;border-color:#FFD324}
 .notice li{margin-right:15px}
 .odd{background:#F8F8F8}
@@ -221,55 +198,6 @@ background-color: #FFFFFF;
 li a:hover,.breadcrumbUl a:hover{text-decoration:underline}
 .atxt{text-align:justify;list-style:none;font-size:13px;line-height:2;color:#777}
 .welcom_notice{color:red;text-decoration: blink}
-ul#css3menu1 a{padding:0px 5px 0px 5px}
-ul#css3menu1,ul#css3menu1 ul{
-	margin:0;list-style:none;padding:0;
-	background-color: #fff;
-	}
-ul#css3menu1 ul{
-	display:none;position:absolute;right:0;top:40px;border-left:1px solid #ccc;border-right:1px solid #ccc;border-top:1px solid #ccc;}
-ul#css3menu1 li:hover>*{
-	display:block;}
-ul#css3menu1 li{
-	position:relative;display:block;white-space:nowrap;font-size:0;float:right;}
-ul#css3menu1 li:hover{
-	z-index:1;}
-ul#css3menu1 ul ul{
-	position:absolute;right:100%;top:0;min-width: 155px;background-color:#eee;border:1px solid #ccc;}
-ul#css3menu1{
-	font-size:0;z-index:999;position:relative;padding:0px;
-	display:inline;}
-* html ul#css3menu1 li a{
-	height:40px;
-	display:inline-block;}
-ul#css3menu1>li{
-	margin:0;}
-ul#css3menu1 a:active, ul#css3menu1 a:focus{
-	outline-style:none;}
-ul#css3menu1 a{
-	display:block;vertical-align:middle;text-align:left;text-decoration:none;font:16px byekan,tahoma,sans-serif;color:#666;cursor:pointer;background-color:#eee;}
-ul#css3menu1 ul li{
-	float:none;margin:1px 0 0;border-bottom: 1px solid #ccc;min-width:155px;background-color:#eee;}
-ul#css3menu1 ul li:hover,ul#css3menu1 li:hover{
-	background-color:#d5ed18;}
-ul#css3menu1 ul a{
-	text-align:center;background-color:#eee;border-width:0;font:16px byekan,tahoma,sans-serif;color:#333;text-decoration:none;}
-ul#css3menu1 li:hover>a,ul#css3menu1 li a.pressed{
-	background-color:#d5ed18;color:#fff;text-decoration:none;}
-ul#css3menu1 span{
-	display:block;overflow:visible;background-position:right center;background-repeat:no-repeat;padding-right:0px;}
-ul#css3menu1 ul span{
-	padding-right:12px;}
-ul#css3menu1 ul li:hover>a,ul#css3menu1 ul li a.pressed{
-	color:#fff;text-decoration:none;}
-.amChartsDataSetSelector
-{
-	font-family:byekan,tahoma,sans-serif;font-size:16px;
-}
-.amChartsPeriodSelector
-{
-    font-family:byekan,tahoma,sans-serif;font-size:16px;
-}
 .amChartsButtonSelected
 {
    background-color:#CC0000;
@@ -324,4 +252,32 @@ ul#css3menu1 ul li:hover>a,ul#css3menu1 ul li a.pressed{
     img.btn_close {
     float: right;
     margin: -28px -28px 0px 0px;
+}
+/*make bootstrap menu on hover*/  
+ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;    
+}
+.navbar{
+	min-height:0;
+}
+.dropdown-menu {right:0;min-width:140px;
+white-space:nowrap;top:98%;
+margin:0px;
+padding:0px;}
+.dropdown-menu .dropdown-menu {right:100%;top:0px;}
+.nav li {float:right;}
+.footer-reserve{
+	height:30px;
+}
+.header-reserve{
+	height:60px;
+}
+.nav li a span:not(.caret) {
+	padding: 10px 7px;
+	display: inline-block;
+	
+}
+.nav li a{
+	padding:0px;
+	display: block;
 }
