yearly table added with jtable

--- a/public/jtable.2.4.0/themes/metro/green/jtable.css
+++ b/public/jtable.2.4.0/themes/metro/green/jtable.css
@@ -56,6 +56,7 @@ div.jtable-main-container table.jtable thead th {
 }
 div.jtable-main-container table.jtable thead th.jtable-column-header div.jtable-column-header-container {
   position: relative;
+  text-align: center;
 }
 div.jtable-main-container table.jtable thead th.jtable-column-header div.jtable-column-header-container span.jtable-column-header-text {
   display: inline-block;
