botton group modified to not break in slim widths

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -296,3 +296,8 @@ nav{
 div.jtable-main-container > div.jtable-bottom-panel select{
     color:#000000;
 }
+div.btn-group{
+    min-width:max-content;
+    min-width:-moz-max-content;
+    min-width:-webkit-max-content;
+}
