--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,9 +35,6 @@ h2.bigtitle {
 	    animation-name: anbig;
     	animation-duration: 2s;
 }
-h2{font-size: 23px;}
-h3{font-size: 18px;}
-h4{font-size: 15px;}
 @keyframes anbig {
     from {border-right: 400px solid #CC0000;
     	    border-left:1px solid #CC0000;
@@ -88,11 +85,7 @@ div.mc-caption{font: bold 14px/20px Arial;color:#EEE;z-index:4;padding:10px 0;te
 .columns .col{float:right;}
 .comment{padding:10px 15px 10px 15px; background: #FFFFFF;border:1px solid #CFCFCF;}
 .comments li{list-style: none;margin-bottom: 7px;}
-.container{width:100%}
-.content{width:600px;float:right}
-.content2{width:620px;float:right}
-.content_shadow{background: url('../images/main_shadow.jpg') center top no-repeat;height: 7px;width: 100%;}
-.display_none{display: none;margin:0;padding:0}
+.display_none{display: none}
 .error{color:red;font-size:13px}
 .even{background:#E5F1F4}
 .footer {
@@ -152,35 +145,6 @@ div.mc-caption{font: bold 14px/20px Arial;color:#EEE;z-index:4;padding:10px 0;te
 .title{color:#333;text-shadow:1px 1px 0 #999;margin:10px 3px 5px 0;font-size:14px}
 .atxt{text-align:justify;list-style:none;font-size:13px;line-height:2;color:#777}
 .welcom_notice{color:red;text-decoration: blink}
-.amChartsButtonSelected
-{
-   background-color:#CC0000;
-   border-style:solid;
-   border-color:#CC00dd;
-   border-width:1px;
-   color:#FFFFFF;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  margin: 1px;   
-}
-.amChartsButton
-{
-   background-color:#EEEEEE;
-   border-style:solid;
-   border-color:#CCCCCC;
-   border-width:1px;
-   color:#000000;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  margin: 1px;  
-}
-.amChartsCompareList
-{
-   border-style:solid;
-   border-color:#CCCCCC;
-   border-width:1px;
-}
-
 .background-container{
 	width: 100%;
 	height: 100%;
@@ -191,19 +155,6 @@ div.mc-caption{font: bold 14px/20px Arial;color:#EEE;z-index:4;padding:10px 0;te
 .background-image {
   width: 100%;
 }
-#search_box{
-    display: none;
-    background-color: #EFEFEF;
-    border: 1px solid #D0D0D0;
-    border-radius: 10px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    margin: 0 auto 20px;
-    padding: 19px 29px 29px;
-    position: fixed;
-    top: 35%;
-    left: 40%;
-}
-  
 /*make bootstrap menu on hover*/  
 ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;    
